Исправлена ошибка в функции remove_all_inputs_of_symbol Переделаны вещественные константы, теперь они не захватывают целые числа. Добавлены ошибки для числовых констант

--- a/compiler/compiler.vcxproj
+++ b/compiler/compiler.vcxproj
@@ -59,7 +59,7 @@
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
   <ImportGroup Label="ExtensionSettings">
-    <Import Project="..\..\win_flex_bison\custom_build_rules\win_flex_bison\win_flex_bison_custom_build.props" />
+    <Import Project="..\win_flex_bison\custom_build_rules\win_flex_bison\win_flex_bison_custom_build.props" />
   </ImportGroup>
   <ImportGroup Label="Shared">
   </ImportGroup>
@@ -146,6 +146,6 @@
   </ItemDefinitionGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
-    <Import Project="..\..\win_flex_bison\custom_build_rules\win_flex_bison\win_flex_bison_custom_build.targets" />
+    <Import Project="..\win_flex_bison\custom_build_rules\win_flex_bison\win_flex_bison_custom_build.targets" />
   </ImportGroup>
 </Project>
