--- a/compiler/compiler.vcxproj
+++ b/compiler/compiler.vcxproj
@@ -23,6 +23,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="lexer.flex.cpp" />
+    <ClCompile Include="synt_analyzer.tab.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Bison Include="synt_analyzer.y">
@@ -31,6 +32,9 @@
       <Verbose Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</Verbose>
       <Verbose Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</Verbose>
     </Bison>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="synt_analyzer.tab.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
