--- a/compiler/compiler.vcxproj
+++ b/compiler/compiler.vcxproj
@@ -35,6 +35,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="synt_analyzer.tab.h" />
+    <ClInclude Include="tree_nodes.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
