--- a/compiler/compiler.vcxproj.filters
+++ b/compiler/compiler.vcxproj.filters
@@ -51,5 +51,8 @@
     <ClInclude Include="create_tree.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="tables.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
