Добавлены функции по преобразованию дерева: Преобразование глобальных функций и переменных в методы и свойства класса <Main> Преобразование .= и []= Преобразование инициализаторов в действия перед конструкторами Проверка и дополнение модификаторов при методах, классах и полей Проверка дублирования имен классов, методов, полей

--- a/compiler/compiler.vcxproj
+++ b/compiler/compiler.vcxproj
@@ -26,6 +26,8 @@
     <ClCompile Include="lexer.flex.cpp" />
     <ClCompile Include="print_funcs.cpp" />
     <ClCompile Include="synt_analyzer.tab.cpp" />
+    <ClCompile Include="tables.cpp" />
+    <ClCompile Include="transform_tree.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Bison Include="synt_analyzer.y">
@@ -40,6 +42,7 @@
     <ClInclude Include="print_funcs.h" />
     <ClInclude Include="synt_analyzer.tab.h" />
     <ClInclude Include="tables.h" />
+    <ClInclude Include="transform_root.h" />
     <ClInclude Include="tree_nodes.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
