--- a/compiler/compiler.vcxproj.filters
+++ b/compiler/compiler.vcxproj.filters
@@ -38,6 +38,9 @@
     <ClCompile Include="transform_tree.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="generate.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Bison Include="synt_analyzer.y">
@@ -61,6 +64,9 @@
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
     <ClInclude Include="transform_root.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="generate.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
