Добавлены файлы для генерации кода.

--- a/compiler/compiler.vcxproj
+++ b/compiler/compiler.vcxproj
@@ -23,6 +23,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="create_tree.cpp" />
+    <ClCompile Include="generate_code.cpp" />
     <ClCompile Include="lexer.flex.cpp" />
     <ClCompile Include="print_funcs.cpp" />
     <ClCompile Include="synt_analyzer.tab.cpp" />
@@ -39,6 +40,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="create_tree.h" />
+    <ClInclude Include="generate_code.h" />
     <ClInclude Include="print_funcs.h" />
     <ClInclude Include="synt_analyzer.tab.h" />
     <ClInclude Include="tables.h" />
