Добавлено перечисление со всеми необходимыми командами.

--- a/compiler/compiler.vcxproj
+++ b/compiler/compiler.vcxproj
@@ -38,6 +38,7 @@
     </Bison>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="commands.h" />
     <ClInclude Include="create_tree.h" />
     <ClInclude Include="print_funcs.h" />
     <ClInclude Include="synt_analyzer.tab.h" />
