--- a/compiler/compiler.vcxproj.filters
+++ b/compiler/compiler.vcxproj.filters
@@ -63,5 +63,8 @@
     <ClInclude Include="transform_root.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="commands.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
